--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
         Hypothèques
       </button>
     </div>
-    <div class="flex-1 p-4" id="content">
-      <h1>Welcome to the Visualization Project</h1>
-      <p>
+    <div class="flex-1 flex flex-col gap-2 p-4" id="content">
+      <h1 class="text-lg font-bold">
         Bienvenue sur la page web de notre outil de visualisation de données
         immobilières!
-      </p>
+      </h1>
       <p>
         En collaboration avec Samuel Ouvrard du journal Le Devoir, cet outil a
         été développé par George Salib, Zakaria Sbai-Chkirid, Khalil Beddouch,
