--- a/index.html
+++ b/index.html
@@ -45,5 +45,11 @@
         faillites et bien d'autres.
       </p>
     </div>
+        <div class="content flex-1 p-4 flex flex-col" id="content">
+        <div class="flex flex-row">
+            <div id="heatmap" class="flex-1"></div>
+            <div id="legend" class="ml-4"></div>
+        </div>
+    </div>
   </body>
 </html>
