--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visualization Project</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://d3-legend.susielu.com/d3-legend.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.7/dist/full.min.css"
