--- a/transfers/index.html
+++ b/transfers/index.html
@@ -27,7 +27,21 @@
     </div>
 
     <div class="flex flex-row">
-      <div class="flex-1" id="content"></div>
+      <div class="flex-1" id="content">
+        <div class="controls mb-4">
+                    <label for="timeSelector" class="mr-2">Select Time Period:</label>
+                    <select id="timeSelector">
+                        <option value="month">Monthly</option>
+                        <option value="year">Yearly</option>
+                    </select>
+                    <label for="regionSelector" class="ml-4 mr-2">Select Regions:</label>
+                    <select id="regionSelector" multiple></select>
+                </div>
+                <div class="flex flex-row">
+                    <div id="heatmap" class="flex-1"></div>
+                    <div id="legend" class="ml-4"></div>
+                </div>
+      </div>
     </div>
 
     <script src="index.js"></script>
