--- a/transfers/index.html
+++ b/transfers/index.html
@@ -35,6 +35,11 @@
         <select id="regionSelector" multiple class="p-2 border rounded-md">
           <option value="all">All</option>
         </select>
+        <label for="startDate" class="ml-4 mr-2">Start Date:</label>
+        <input type="date" id="startDate" class="p-2 border rounded-md">
+        <label for="endDate" class="ml-4 mr-2">End Date:</label>
+        <input type="date" id="endDate" class="p-2 border rounded-md">
+        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Apply</button>
       </div>
       <div class="flex flex-row">
         <div id="heatmap" class="flex-1 bg-white shadow rounded p-4"></div>
