--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,9 +43,7 @@
       </div>
       <div class="flex justify-center">
         <div id="heatmap" class="bg-white shadow rounded p-4"></div>
-      </div>
-      <div class="flex justify-center mt-4">
-        <div id="legend"></div>
+        <div id="legend" class="ml-4"></div>
       </div>
     </div>
 
