--- a/transfers/index.html
+++ b/transfers/index.html
@@ -42,8 +42,8 @@
         <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Apply</button>
       </div>
       <div class="flex justify-center">
-        <div id="heatmap" class="bg-white shadow rounded p-3"></div>
-        <div id="legend" class="ml-4"></div>
+        <div id="heatmap" class="bg-white shadow rounded"></div>
+        <div id="legend" class="ml-5"></div>
       </div>
     </div>
 
