--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,10 +43,10 @@
       </div>
       <div class="flex justify-center">
         <div id="heatmap" class="w-full"></div>
-        <div id="legend" class="ml-3"></div>
+        <div id="legend" class="ml-5"></div>
       </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="heatmap.js"></script>
   </body>
 </html>
