--- a/transfers/index.html
+++ b/transfers/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body
+    data-theme="light"
     class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[280px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
