--- a/transfers/index.html
+++ b/transfers/index.html
@@ -19,8 +19,8 @@
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
       <a class="p-2 font-bold btn" href="/">Acceuil</a>
-      <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
-      <a class="p-2 font-bold btn btn-neutral" href="/sales">Ventes</a>
+      <a class="p-2 font-bold btn" btn-neutral href="/transfers">Transferts</a>
+      <a class="p-2 font-bold btn " href="/sales">Ventes</a>
       <a class="p-2 font-bold btn" href="/difficulties">Difficultés financières</a>
       <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
     </div>
