--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,7 +43,7 @@
         <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Apply</button>
       </div>
       <div class="flex justify-center">
-        <div id="heatmap" class="w-full"></div>
+        <div id="heatmap" class="w-full  place-content-center" ></div>
         <div id="legend" class="ml-5"></div>
       </div>
     </div>
