--- a/transfers/index.html
+++ b/transfers/index.html
@@ -27,20 +27,20 @@
 
     <div class="flex flex-col flex-1 p-4 bg-gray-100">
       <div class="controls mb-4 flex items-center justify-center">
-        <label for="timeSelector" class="mr-2">Select Time Period:</label>
+        <label for="timeSelector" class="mr-2">Selectionner l'interval de temps:</label>
         <select id="timeSelector" class="p-2 border rounded-md">
-          <option value="month">Monthly</option>
-          <option value="year">Yearly</option>
+          <option value="month">Mensuel</option>
+          <option value="year">Annuel</option>
         </select>
-        <label for="regionSelector" class="ml-4 mr-2">Select Regions:</label>
+        <label for="regionSelector" class="ml-4 mr-2">Selectionner les régions:</label>
         <select id="regionSelector" multiple class="p-2 border rounded-md">
-          <option value="all">All</option>
+          <option value="all">Tout</option>
         </select>
-        <label for="startDate" class="ml-4 mr-2">Start Date:</label>
+        <label for="startDate" class="ml-4 mr-2">Date de début:</label>
         <input type="date" id="startDate" class="p-2 border rounded-md">
-        <label for="endDate" class="ml-4 mr-2">End Date:</label>
+        <label for="endDate" class="ml-4 mr-2">Date de fin:</label>
         <input type="date" id="endDate" class="p-2 border rounded-md">
-        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Apply</button>
+        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Appliquer</button>
       </div>
       <div class="flex justify-center">
         <div id="heatmap" class="w-9/12  place-content-center" ></div>
