added more french

--- a/transfers/index.html
+++ b/transfers/index.html
@@ -27,12 +27,12 @@
 
     <div class="flex flex-col flex-1 p-4 bg-gray-100">
       <div class="controls mb-4 flex items-center justify-center">
-        <label for="timeSelector" class="mr-2">Selectionner l'interval de temps:</label>
+        <label for="timeSelector" class="mr-2">Sélectionner l'interval de temps:</label>
         <select id="timeSelector" class="p-2 border rounded-md">
           <option value="month">Mensuel</option>
           <option value="year">Annuel</option>
         </select>
-        <label for="regionSelector" class="ml-4 mr-2">Selectionner les régions:</label>
+        <label for="regionSelector" class="ml-4 mr-2">Sélectionner les régions:</label>
         <select id="regionSelector" multiple class="p-2 border rounded-md">
           <option value="all">Tout</option>
         </select>
