--- a/transfers/index.html
+++ b/transfers/index.html
@@ -34,7 +34,7 @@
         </select>
         <label for="regionSelector" class="ml-4 mr-2">Sélectionner les régions:</label>
         <select id="regionSelector" multiple class="p-2 border rounded-md">
-          <option value="Tout"></option>
+          <option></option>
         </select>
         <label for="startDate" class="ml-4 mr-2">Date de début:</label>
         <input type="date" id="startDate" class="p-2 border rounded-md">
