ZS|Stacked area chart fixed

--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -35,7 +35,9 @@
     <div
       class="grid min-h-screen w-full md:grid-cols-[1fr_400px] lg:grid-cols-[1fr_400px]"
     >
-      <div id="content"></div>
+      <div class="graph" id="stackedArea">
+        <svg class="stackedArea-svg"></svg>
+      </div>
       <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
         <div class="time_filter" id="time_filter">
           <label class="text-white font-bold" for="start-year"
