--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visualization Project</title>
+    <title>Le Devoir: Marché immobilier</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <link
@@ -67,7 +67,7 @@
         <div>
           <div>
             <label class="text-white font-bold" for="region-select"
-              >Ajouter une Région Administrative</label
+              >Ajouter une région administrative</label
             >
             <select
               class="select select-sm select-bordered w-full"
