--- a/transfers/index.html
+++ b/transfers/index.html
@@ -36,11 +36,11 @@
         <select id="regionSelector" multiple class="p-2 border rounded-md">
           <option value="Tout"></option>
         </select>
-        <label for="startDate" class="ml-4 mr-2">Date de début:</label>
+<!--         <label for="startDate" class="ml-4 mr-2">Date de début:</label>
         <input type="date" id="startDate" class="p-2 border rounded-md">
         <label for="endDate" class="ml-4 mr-2">Date de fin:</label>
         <input type="date" id="endDate" class="p-2 border rounded-md">
-        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Appliquer</button>
+        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Appliquer</button> -->
       </div>
       <div class="flex justify-center">
         <div id="heatmap" class="w-9/12  place-content-center" ></div>
