--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -36,6 +36,7 @@
       class="grid min-h-screen w-full md:grid-cols-[1fr_400px] lg:grid-cols-[1fr_280px]"
     >
       <div class="graph" id="stackedArea">
+        <h1 class="p-4 text-xl text-center font-bold">PLACEHOLDER</h1>
         <svg class="stackedArea-svg"></svg>
       </div>
       <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
