--- a/sales/index.html
+++ b/sales/index.html
@@ -27,7 +27,8 @@
       <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
     </div>
 
-    <div class="flex flex-row">
+    <div class="flex flex-col">
+      <h1 class="p-4 text-xl text-center font-bold">PLACEHOLDER</h1>
       <div class="flex-1" id="content"></div>
     </div>
 
