--- a/transfers/index.html
+++ b/transfers/index.html
@@ -40,7 +40,7 @@
         <label for="regionSelector" class="ml-4 mr-2"
           >Sélectionner les régions:</label
         >
-        <select id="regionSelector" multiple class="p-2 border rounded-md">
+        <select id="regionSelector" class="p-2 border rounded-md">
           <option value="Tout"></option>
         </select>
         <!--         <label for="startDate" class="ml-4 mr-2">Date de début:</label>
