--- a/transfers/index.html
+++ b/transfers/index.html
@@ -37,11 +37,11 @@
           <option value="month">Mensuel</option>
           <option value="year">Annuel</option>
         </select>
-        <label for="regionSelector" class="ml-4 mr-2"
+<label for="regionSelector" class="ml-4 mr-2"
           >Sélectionner les régions:</label
         >
         <select id="regionSelector" class="p-2 border rounded-md">
-          <option value="Tout"></option>
+          <option value="Tout">Tout</option>
         </select>
         <!--         <label for="startDate" class="ml-4 mr-2">Date de début:</label>
         <input type="date" id="startDate" class="p-2 border rounded-md">
