--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -15,7 +15,7 @@
   </head>
   <body
     data-theme="light"
-    class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
+    class="grid min-h-screen w-full lg:grid-cols-[135px_1fr_280px]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
       <a class="p-2 font-bold btn" href="/">Acceuil</a>
@@ -27,95 +27,48 @@
       <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
     </div>
 
-    <div class="flex flex-row">
-        <div class="flex-1" id="content">
-        <!-- inspired by chatgpt -->
-        <!DOCTYPE html>
-            <html lang="en">
-                <head>
-                    <meta charset="UTF-8" />
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-                    <script src="https://d3js.org/d3.v7.min.js"></script>
-                    <style>
-                    .tooltip {
-                        position: absolute;
-                        text-align: center;
-                        width: auto;
-                        height: auto;
-                        padding: 8px;
-                        font: 12px sans-serif;
-                        background: lightsteelblue;
-                        border: 0px;
-                        border-radius: 8px;
-                        pointer-events: none;
-                        visibility: hidden;
-                    }
-
-                    .container {
-                        display: flex;
-                        justify-content: space-between; /* Distribute items evenly; controls will be on the right */
-                        align-items: flex-start; /* Align items at the top */
-                        height: 100vh; /* Full viewport height */
-                    }
-
-                    .map-container {
-                        flex: 1; /* Take up remaining space */
-                        padding: 20px; /* Adjust padding as needed */
-                    }
-
-                    .button-container {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        gap: 10px; /* Adjust spacing between controls */
-                        padding: 10px;
-                    }
-
-                    #pageTitle {
-                        text-align: center;
-                        font-size: 24px;
-                        font-weight: bold;
-                        margin: 20px 0;
-                        color: #333;
-                    }
-                    </style>
-                </head>
-                <body>
-                    <div id="map-container">
-                        <div id="map">
-                            <h1 id="pageTitle">La détresse financière au Québec en nombre</h1>
-                            <svg id="mapSvg" width="100%" height="100%"></svg>
-                            <div id="tooltip" class="tooltip"></div>
-                        </div>
-                        <div id="legend">
-                            <svg id="legendSvg"></svg>
-                        </div>
-                        <div id="controls" class="button-container">
-                            <div id="time-range">
-                                <div>
-                                    <label for="startYearSelect">Sélectionner l'année de début : </label>
-                                    <select id="startYearSelect"></select>
-                                    <div>
-                                        <label for="startMonthSelect">Sélectionner le mois de début : </label>
-                                        <select id="startMonthSelect"></select>
-                                    </div>
-                                </div>
-                                <div>
-                                    <label for="endYearSelect">Sélectionner l'année de fin : </label>
-                                    <select id="endYearSelect"></select>
-                                    <div>
-                                        <label for="endMonthSelect">Sélectionner le mois de fin : </label>
-                                        <select id="endMonthSelect"></select>
-                                    </div>
-                                </div>
-                        </div>
-                    </div>
-                    </div>
-                    <script src="index.js"></script>
-                </body>
-            </html>
-        </div>
+    <div class="relative space-y-4">
+      <h1 class="p-4 text-xl text-center font-bold">
+        La détresse financière au Québec en nombre
+      </h1>
+      <svg class="mx-auto" id="mapSvg"></svg>
+      <svg class="mx-auto" id="legendSvg"></svg>
+      <div
+        id="tooltip"
+        class="absolute pointer-events-none p-2 rounded-lg bg-white border text-xs"
+        style="visibility: hidden"
+      ></div>
     </div>
+    <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
+      <div class="time_filter" id="time_filter">
+        <label class="text-white font-bold text-lg" for="start-year"
+          >Choisissez la période à couvrir</label
+        >
+        <div class="grid gap-1 grid-cols-[2fr_3fr_3fr] items-center">
+          <label for="startYearSelect" class="text-white font-bold"
+            >Début</label
+          >
+          <select
+            class="select select-sm select-bordered"
+            id="startYearSelect"
+          ></select>
+          <select
+            class="select select-sm select-bordered"
+            id="startMonthSelect"
+          ></select>
+          <label for="endYearSelect" class="text-white font-bold">Fin</label>
+          <select
+            class="select select-sm select-bordered"
+            id="endYearSelect"
+          ></select>
+          <select
+            class="select select-sm select-bordered"
+            id="endMonthSelect"
+          ></select>
+        </div>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
-
