--- a/sales/index.html
+++ b/sales/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="flex flex-col">
-      <h1 class="p-4 text-xl text-center font-bold">PLACEHOLDER</h1>
+      <h1 class="p-4 text-xl text-center font-bold">Nombre d'achats par gamme de prix</h1>
       <div class="flex-1" id="content"></div>
     </div>
 
