--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,11 +43,9 @@
         <select id="regionSelector" class="p-2 border rounded-md">
           <option value="Tout">Tout</option>
         </select>
-        <!--         <label for="startDate" class="ml-4 mr-2">Date de début:</label>
-        <input type="date" id="startDate" class="p-2 border rounded-md">
-        <label for="endDate" class="ml-4 mr-2">Date de fin:</label>
-        <input type="date" id="endDate" class="p-2 border rounded-md">
-        <button id="applyFilters" class="ml-4 p-2 border rounded-md bg-blue-500 text-white">Appliquer</button> -->
+        <select id="dateSelector" class="p-2 border rounded-md">
+          <option value="All">All</option>
+        </select>
       </div>
       <div class="flex justify-center">
         <div id="heatmap" class="w-9/12 place-content-center"></div>
