--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,8 +43,11 @@
         <select id="regionSelector" class="p-2 border rounded-md">
           <option value="Tout">Tout</option>
         </select>
+        <label for="dateSelector" class="ml-4 mr-2"
+          >Sélectionner la date:</label
+        >
         <select id="dateSelector" class="p-2 border rounded-md">
-          <option value="All">All</option>
+          <option value="MOIS-Année">MOIS-Année</option>
         </select>
       </div>
       <div class="flex justify-center">
