--- a/transfers/index.html
+++ b/transfers/index.html
@@ -12,6 +12,21 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+     <style>
+      .tooltip {
+        position: absolute;
+        text-align: left;
+        width: auto;
+        height: auto;
+        padding: 10px;
+        font: 12px sans-serif;
+        background: lightsteelblue;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        pointer-events: none;
+        color: #333;
+      }
+    </style>
   </head>
   <body
     data-theme="light"
