--- a/transfers/index.html
+++ b/transfers/index.html
@@ -62,7 +62,7 @@
           >Sélectionner la date:</label
         >
         <select id="dateSelector" class="p-2 border rounded-md">
-          <option value="MOIS-Année">MOIS-Année</option>
+          <option value="Mois-Année">Mois-Année</option>
         </select>
       </div>
       <div class="flex justify-center">
