--- a/transfers/index.html
+++ b/transfers/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="flex flex-col flex-1 bg-gray-100">
-      <h1 class="p-4 text-xl text-center font-bold">PLACEHOLDER</h1>
+      <h1 class="p-4 text-xl text-center font-bold">Nombre de Requêtes par Région</h1>
       <div class="controls mb-4 flex p-4 items-center justify-center">
         <label for="timeSelector" class="mr-2"
           >Sélectionner l'interval de temps:</label
