ZS| sting Accueil fixed et titres sections stylisées

--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -18,7 +18,7 @@
     class="grid min-h-screen w-full lg:grid-cols-[135px_1fr_280px]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Acceuil</a>
+      <a class="p-2 font-bold btn" href="/">Accueil</a>
       <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
       <a class="p-2 font-bold btn" href="/sales">Ventes</a>
       <a class="p-2 font-bold btn btn-neutral" href="/difficulties"
@@ -28,7 +28,7 @@
     </div>
 
     <div class="relative space-y-4">
-      <h1 class="p-4 text-xl text-center font-bold">
+      <h1 class=" text-3xl font-extrabold dark:text-white">
         La détresse financière au Québec en nombre
       </h1>
       <svg class="mx-auto" id="mapSvg"></svg>
