--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       class="flex h-full flex-col gap-4 p-4 bg-neutral-400"
       aria-label="Main Navigation"
     >
-      <a class="p-2 font-bold btn btn-neutral" href="/">Acceuil</a>
+      <a class="p-2 font-bold btn btn-neutral" href="/">Accueil</a>
       <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
       <a class="p-2 font-bold btn" href="/sales">Ventes</a>
       <a class="p-2 font-bold btn" href="/difficulties"
@@ -42,7 +42,7 @@
       <a class="p-2 font-bold btn" href="/mortgages">Hypothèques</a>
     </nav>
     <main class="flex-1 flex flex-col gap-4 p-4" id="content">
-      <h1 class="text-xl font-bold">
+      <h1 class=" text-3xl font-extrabold dark:text-white">
         Bienvenue sur la page web de notre outil de visualisation de données
         immobilières!
       </h1>
