--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -18,7 +18,7 @@
     class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Acceuil</a>
+      <a class="p-2 font-bold btn" href="/">Accueil</a>
       <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
       <a class="p-2 font-bold btn" href="/sales">Ventes</a>
       <a class="p-2 font-bold btn" href="/difficulties"
