--- a/sales/index.html
+++ b/sales/index.html
@@ -18,7 +18,7 @@
     class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Acceuil</a>
+      <a class="p-2 font-bold btn" href="/">Accueil</a>
       <a class="p-2 font-bold btn" href="/transfers">Transferts</a>
       <a class="p-2 font-bold btn btn-neutral" href="/sales">Ventes</a>
       <a class="p-2 font-bold btn" href="/difficulties"
@@ -28,7 +28,7 @@
     </div>
 
     <div class="flex flex-col">
-      <h1 class="p-4 text-xl text-center font-bold">Nombre d'achats par gamme de prix</h1>
+      <h1 class=" text-3xl font-extrabold dark:text-white">Nombre d'achats par gamme de prix</h1>
       <div class="flex-1" id="content"></div>
     </div>
 
