--- a/transfers/index.html
+++ b/transfers/index.html
@@ -33,7 +33,7 @@
     class="grid min-h-screen w-full md:grid-cols-[220px_1fr] lg:grid-cols-[135px_1fr]"
   >
     <div class="flex h-full flex-col gap-4 p-4 bg-neutral-400">
-      <a class="p-2 font-bold btn" href="/">Acceuil</a>
+      <a class="p-2 font-bold btn" href="/">Accueil</a>
       <a class="p-2 font-bold btn btn-neutral" href="/transfers">Transferts</a>
       <a class="p-2 font-bold btn" href="/sales">Ventes</a>
       <a class="p-2 font-bold btn" href="/difficulties"
@@ -43,7 +43,7 @@
     </div>
 
     <div class="flex flex-col flex-1 bg-gray-100">
-      <h1 class="p-4 text-xl text-center font-bold">Nombre de Requêtes par Région</h1>
+      <h1 class=" text-3xl font-extrabold dark:text-white">Nombre de Requêtes par Région</h1>
       <div class="controls mb-4 flex p-4 items-center justify-center">
         <label for="timeSelector" class="mr-2"
           >Sélectionner l'interval de temps:</label
