ZS|Justified contents center for graph and moved x axis label lower

--- a/mortgages/index.html
+++ b/mortgages/index.html
@@ -35,7 +35,7 @@
     <div
       class="grid min-h-screen w-full md:grid-cols-[1fr_400px] lg:grid-cols-[1fr_280px]"
     >
-      <div class="grid grid-rows-[15px_auto_40px] items-center">
+      <div class="grid grid-rows-[15px_auto_40px] items-center justify-center">
           <header class=" text-3xl font-extrabold dark:text-white">Hypothèques mensuelles au fil du temps</header>
           <div class="graph" id="stackedArea">
             <svg class="stackedArea-svg"></svg>
